# Visual-training-1

./: README.md
task 1/A-hello-cmake/: CMakeLists.txt  main.cpp
task 1/B-hello-headers/: CMakeLists.txt
task 1/B-hello-headers/src/: Hello.cpp  main.cpp
task 1/C-static-library/: CMakeLists.txt
task 1/C-static-library/src/: Hello.cpp  main.cpp
task 1/D-shared-library/: CMakeLists.txt
task 1/D-shared-library/src/: Hello.cpp  main.cpp
task 2/: CMakeLists.txt  main.cpp
task 3/: CMakeLists.txt  main.cpp
